feat: adiciona novo endpoint create user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,18 @@ services:
     ports:
       - "5433:5432"
   samba-api:
+    build: ./samba_api
+    ports:
+      - "8000:8000"
+    restart: always
+    depends_on:
+      - db
+
+    volumes:
+      - ./samba_api:/app
+    networks:
+      - samba-net
+
+networks:
+  samba-net:
     
