--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12, <4.0"
 dependencies = [
-    "fastapi[standard] (>=0.116.1,<0.117.0)"
+    "fastapi[standard] (>=0.116.1,<0.117.0)",
+    "pydantic-settings (>=2.11.0,<3.0.0)",
+    "sqlalchemy (>=2.0.44,<3.0.0)"
 ]
 
 
